--- a/frontend/src/app/dashboard/PieChart.css
+++ b/frontend/src/app/dashboard/PieChart.css
@@ -13,20 +13,19 @@
 }
 
 .svg-container {
-    width: 100%;
+    width: 100%; 
     height: 85%;
 }
 
 .key-grid {
-    display: grid;
+    display: grid; 
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    gap: 8px;
-    padding: 10px;
+    gap: 6px;
     margin-top: 0px;
-    width: 90%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 600px;
+    max-width: 800px;
 }
 
 .key-item {
@@ -35,6 +34,7 @@
     gap: 6px;
     justify-content: left;
     min-width: 0;
+    width: auto;
 }
 
 .key-dot {
@@ -50,8 +50,9 @@
     font-size: clamp(0.7rem, 1.2vh, 1rem);
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
-    white-space: nowrap;
+    line-height: 1;
     overflow: hidden;
     max-width: 100%;
+    word-wrap: break-word;
+    word-break: break-word;
 }
