--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -88,6 +88,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
+    display: inline-block;
 }
 
 .Borrowed {
@@ -110,6 +111,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
+    display: inline-block;
 }
 
 .Great {
