--- a/frontend/src/app/inventory/15Tablecomp/Popup.css
+++ b/frontend/src/app/inventory/15Tablecomp/Popup.css
@@ -109,13 +109,13 @@
 .noteSection {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 20px;
   width: 100%;
   justify-content: left;
   align-items: flex-start;
 }
 
-textarea {
+#noteBox {
   width: 100%;
   height: auto;
   min-height: 20vh;
@@ -127,5 +127,15 @@ textarea {
   padding-left: 0.75rem;
   padding-top: 0.5rem;
   margin-top: 10px;
+}
+
+.borrowerSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.returnButton {
+  display: block;
 }
 
