--- a/frontend/src/app/inventory/15Tablecomp/Popup.css
+++ b/frontend/src/app/inventory/15Tablecomp/Popup.css
@@ -159,5 +159,28 @@
   width: 100%;
   table-layout: fixed;
   text-align: left;
-  margin-top: 15px;
+  margin-top: 10px;
+  border: 1px solid #9B525F;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  border-collapse: collapse;
+  overflow: hidden;
+}
+
+#borrowerHistoryth {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-top: 20px;
+    display: flex;
+}
+
+#borrowerHistory td{
+    border-bottom: 1px solid #D9D9D9;
+    padding: 10px; 
+    border-radius: 5px;
+}
+
+#divider {
+    border-bottom: 1px solid #D9D9D9; 
+    width: 100%;
+    margin: 40px 0;
 }
