--- a/frontend/src/app/inventory/15Tablecomp/Popup.css
+++ b/frontend/src/app/inventory/15Tablecomp/Popup.css
@@ -155,32 +155,36 @@
   font-size: 1.25rem;
 }
 
-#borrowerHistory {
-  width: 100%;
-  table-layout: fixed;
-  text-align: left;
-  margin-top: 10px;
-  border: 1px solid #9B525F;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-  border-collapse: collapse;
-  overflow: hidden;
-}
-
-#borrowerHistoryth {
+#borrowerHistorytitle {
     font-size: 1.25rem;
     font-weight: bold;
     margin-top: 20px;
     display: flex;
 }
 
-#borrowerHistory td{
-    border-bottom: 1px solid #D9D9D9;
-    padding: 10px; 
-    border-radius: 5px;
-}
-
 #divider {
     border-bottom: 1px solid #D9D9D9; 
     width: 100%;
     margin: 40px 0;
+}
+
+#borrowerHistory {
+    width: 100%;
+    border-collapse: separate; 
+    border-spacing: 0;
+    border: 1px solid #9B525F;
+    border-radius: 5px;
+    overflow: hidden; 
+    text-align: left;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 10px;
+}
+
+#borrowerHistory th, #borrowerHistory td {
+    padding: 10px;
+    border-bottom: 1px solid #D9D9D9;
+}
+
+#borrowerHistory tr:last-child td {
+    border-bottom: none; 
 }
