--- a/frontend/src/app/components/DeletePopup.css
+++ b/frontend/src/app/components/DeletePopup.css
@@ -21,7 +21,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 999;
+    z-index: 1000;
 }
 
 .deleteContent {
@@ -42,6 +42,32 @@
     min-height: 200px;
     overflow-wrap: break-word;
     display: inline-block;
+}
+
+.fade-in {
+    animation: fade-in 0.25s ease-in-out;
+  }
+  
+.fade-out {
+    animation: fade-out 0.25s ease-in-out;
+}
+  
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 .deleteContent h2 {
