--- a/frontend/src/app/components/ReturnButton.css
+++ b/frontend/src/app/components/ReturnButton.css
@@ -22,7 +22,7 @@
 /* container for all return items */
 .itemContainer {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-flow: row wrap;
     justify-items: flex-start;
     align-items: baseline;
@@ -33,17 +33,18 @@
 /* one translucent red box */
 .returnItem {
     display: flex;
-    margin-bottom: 2vh;
+    margin: 1vh 1vw;
     flex-direction: column;
     background-color: #E3CECE;
-    border: 0.1vw solid #9B525F;
-    padding: 1vw;
+    border: 1px solid #9B525F;
+    padding: 1vh 1vw;
     width: 26vw;
-    height: auto;
+    height: 34vh;
     color: black;
     font-family: "Akatab", serif;
     border-radius: 4.813px;
     box-shadow: 0px 1.925px 4.813px 0px rgba(0, 0, 0, 0.25);
+    justify-content: space-evenly;
 }
 
 /* top row in a given return item box -- containing img, name/id info, 
@@ -64,11 +65,19 @@
 /* note: will need separate css class for handling exit button */
 /* note: image will need white border styling and sizing */
 
+.notesWrapper {
+    height: 15vh;
+}
+
+.conditionWrapper {
+    height: 8vh;
+}
 /* textbox for "notes" about return item */
 .notesTextbox {
     width: 100%;
-    height: 5vw;
-    border: 0.1vw solid #9B525F;
+    height: 11vh;
+    flex: 0;
+    border: 1px solid #9B525F;
     background-color: #F8F5F5;
 }
 
@@ -76,10 +85,10 @@
  * this should be an element of type <select> with dropdown items as <option> */
 .conditionDropdown {
     width: 100%;
-    height: 2vw;
+    height: 60%;
     position: relative;
     display: inline-block;
-    border: 0.1vw solid #9B525F;
+    border: 1px solid #9B525F;
     background-color: #F8F5F5;
 }
   
@@ -89,7 +98,7 @@
     position: absolute;
     background-color: #9B525F;
     min-width: 100%;
-    height: 3vw;
+    height: 7vh;
 }
   
 .conditionDropdown:hover .dropdown-content {
