--- a/frontend/src/app/components/BorrowPopup.css
+++ b/frontend/src/app/components/BorrowPopup.css
@@ -108,8 +108,20 @@
   
   .borrowed-items-container {
     flex: 1;
-    overflow-y: auto;
+/*     overflow-y: auto; */
     width: 100%;
+  }
+
+  .pagination-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
+  }
+  
+  .pagination {
+    display: flex;
+    gap: 0.5rem;
   }
   
   .borrowed-item-box {
@@ -204,6 +216,11 @@
   .form-group.full-width {
     width: 100%;
   }
+
+  .form-group.half-height {
+    width: 100%;
+    height: 50%;
+  }
   
   .form-group label {
     margin-bottom: 0.25rem;
@@ -242,6 +259,10 @@
 
   }
 
+  .form-group-dropdown {
+    font: Akatab;
+  }
+
   .form-group select.form-group-dropdown {
     border: 0.5px solid transparent !important;
 
@@ -255,11 +276,15 @@
     border: 1px solid #9b525f;
     font-size: 1rem;
     font-family: Arial, sans-serif;
-    box-sizing: border-box;
     width: 100%;
-
+    height: 50%;
     border-radius: 5px;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .form-group textarea {
+    resize: vertical;
+    min-height: 100px;
   }
   
 .info-form input.non-editable {
@@ -321,12 +346,6 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-  }
-  
-  
-  .form-group textarea {
-    resize: vertical;
-    min-height: 150px;
   }
   
   
@@ -472,20 +491,6 @@
   .success-popup button:hover {
     background-color: #9B525F; 
     color: #FFFFFF;
-  }
-
-  .pagination-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    position: absolute;  /* 👈 pins it to bottom */
-    bottom: 1rem;        /* spacing from bottom */
-    left: 0;
-  }
-  
-  .pagination {
-    display: flex;
-    gap: 0.5rem;
   }
   
   
